Customize sway themes and waybar modules and themes.

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -8,8 +8,8 @@
 # title=foot
 # locked-title=no
 
-font=Fantasque Sans Mono:weight=regular:size=10
-font-bold=Fantasque Sans Mono:weight=bold:size=10
+font=FantasqueSansMono Nerd Font Mono:weight=regular:size=10
+font-bold=FantasqueSansMono Nerd Font Mono:weight=bold:size=10
 font-italic=Victor Mono:weight=medium:slant=italic:size=9
 font-bold-italic=Victor Mono:weight=bold:slant=italic:size=9
 # line-height=<font metrics>
