--- a/.config/sway/config
+++ b/.config/sway/config
@@ -8,17 +8,20 @@
 ####################
 
 
-# Navigation
-set $left h
-set $down j
-set $up k
-set $right l
+# Wob Socket
+set $wobsock "$XDG_RUNTIME_DIR/wob.sock"
 
 # swaylock-effects (daemonized)
-set $swaylock 'bash ~/.config/sway/scripts/swaylock.sh'
+set $swaylock "bash ~/.config/sway/scripts/swaylock.sh"
 
 # Waybar
-set $waybar 'bash ~/.config/sway/scripts/waybar.sh'
+set $waybar "bash ~/.config/sway/scripts/waybar.sh"
+
+# Suspend Command
+set $suspend "systemctl -i suspend-then-hibernate"
+
+# Terminal Emulator
+set $term foot
 
 
 ####################
@@ -52,11 +55,44 @@ output * bg /run/current-system/sw/share/backgrounds/sway/Sway_Wallpaper_Blue_19
 #######################
 
 
+# General
+# -------
+
+# Enable Xwayland for compatibility with X11 applications.
+xwayland enable
+
 # Set the default layout for new containers.
 workspace_layout tabbed
 
 # Set the default orientation for new workspaces.
 default_orientation auto
+
+# Stop mouse movements from stealing the focus.
+focus_follows_mouse no
+
+# Adjust the border of width and eliminate title bar.
+default_border pixel 4px
+default_floating_border pixel 4px
+
+
+# Floating windows
+# ----------------
+
+# Nextcloud
+for_window [app_id="com.nextcloud.desktopclient.nextcloud"] floating enable
+
+# Firefox Pop-Ups
+for_window [app_id="firefox" title="^$"] floating enable
+
+# Wev
+for_window [app_id="wev"] floating enable
+
+
+# Idle Inhibition
+# ---------------
+
+# mpv
+for_window [app_id="mpv"] idle_inhibit
 
 
 ##############
@@ -69,19 +105,20 @@ default_orientation auto
 exec --no-startup-id dex --autostart --environment sway
 
 # Start swayidle and swaylock for desktop idle and lock.
-exec --no-startup-id swayidle -w \
-         timeout 480 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-         timeout 600 $swaylock \
-         before-sleep $swaylock
+exec swayidle -w \
+     timeout 480 "swaymsg 'output * dpms off'" resume "swaymsg 'output * dpms on'" \
+     timeout 600 $swaylock \
+     timeout 720 $suspend \
+     before-sleep $swaylock
 
 # Start a single instance of gammastep.
-exec --no-startup-id gammastep -l 0:0 -t 1900:1900 -g 1.2 -m wayland
+exec gammastep -l 0:0 -t 1900:1900 -g 1.2 -m wayland
 
 # Start a single instance of Waybar.
-exec_always --no-startup-id $waybar
+exec_always $waybar
 
-# Run nm-applet, a desktop environment-independent system tray GUI for NetworkManager.
-exec --no-startup-id nm-applet
+# Run wob for nice overlay bars.
+exec rm -f $wobsock && mkfifo $wobsock && tail -f $wobsock | wob
 
 
 ###############
@@ -89,94 +126,125 @@ exec --no-startup-id nm-applet
 ###############
 
 
-# Win Key
-set $mod Mod4
+# Super Key
+set $super Mod4
 # Alt Key
 set $alt Mod1
+
+# Navigation Keys
+set $left h
+set $down j
+set $up k
+set $right l
+
+# Nagbar keys
+set $exit_sway e
+set $reboot r
+set $shutdown s
+set $dismiss_nag d
+
 
 # Brightness and Volume
 # ---------------------
 
-# Use light to adjust brightness.
-bindsym XF86MonBrightnessUp exec --no-startup-id light -A 2%
-bindsym XF86MonBrightnessDown exec --no-startup-id light -N 2% && light -U 2%
+## Brightness
+bindsym XF86MonBrightnessUp exec --no-startup-id light -A 2% \
+    && light -G | cut -d . -f 1 > $wobsock
+bindsym XF86MonBrightnessDown exec --no-startup-id light -N 2% && light -U 2% \
+    && light -G | cut -d . -f 1 > $wobsock
 
-# Use amixer to adjust volume.
+## Volume
 # Adjust sink volumes.
-bindsym XF86AudioRaiseVolume exec --no-startup-id pamixer --increase 2
-bindsym XF86AudioLowerVolume exec --no-startup-id pamixer --decrease 2
-bindsym XF86AudioMute exec --no-startup-id pamixer --toggle-mute
+bindsym XF86AudioRaiseVolume exec --no-startup-id pamixer --increase 2 \
+    && pamixer --get-volume > $wobsock
+bindsym XF86AudioLowerVolume exec --no-startup-id pamixer --decrease 2 \
+    && pamixer --get-volume > $wobsock
+bindsym XF86AudioMute exec --no-startup-id pamixer --toggle-mute \
+    && (pamixer --get-mute && echo 0 > $wobsock) || pamixer --get-volume > $wobsock
+
 # Adjust source volumes.
-bindsym $alt+equal exec --no-startup-id \
-    pamixer --default-source --increase 2
-bindsym $alt+minus exec --no-startup-id \
-    pamixer --default-source --decrease 2
-bindsym $alt+BackSpace exec --no-startup-id \
-    pamixer --default-source --toggle-mute
+bindsym $alt+equal exec --no-startup-id pamixer --default-source --increase 2 \
+    && pamixer --default-source --get-volume > $wobsock
+bindsym $alt+minus exec --no-startup-id pamixer --default-source --decrease 2 \
+    && pamixer --default-source --get-volume > $wobsock
+bindsym $alt+BackSpace exec --no-startup-id pamixer --default-source --toggle-mute \
+    && (pamixer --default-source --get-mute && echo 0 > $wobsock) \
+    || pamixer --default-source --get-volume > $wobsock
+
+
+# Sleep and Power
+# ---------------
+
+# Suspend on pressing the "Sleep" button.
+bindsym Xf86Sleep exec --no-startup-id $suspend
+
+# Suspend on laptop lid switch.
+bindswitch --locked lid:on exec --no-startup-id $suspend
+
 
 # Defaults
 # --------
 
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
+# Use Mouse+$super to drag floating windows to their wanted position
+floating_modifier $super
 
 # Start a terminal
-bindsym $mod+Return exec foot
+bindsym $super+Return exec $term
 
 # Kill focused window
-bindsym $mod+Shift+q kill
+bindsym $super+Shift+q kill
 
 # Start wofi menu.
-bindsym $mod+d exec --no-startup-id wofi --show drun,run
+bindsym $super+d exec --no-startup-id rofi -show drun,run
 
 # Change focus
-bindsym $mod+$left focus left
-bindsym $mod+$down focus down
-bindsym $mod+$up focus up
-bindsym $mod+$right focus right
+bindsym $super+$left focus left
+bindsym $super+$down focus down
+bindsym $super+$up focus up
+bindsym $super+$right focus right
 
 # Alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+bindsym $super+Left focus left
+bindsym $super+Down focus down
+bindsym $super+Up focus up
+bindsym $super+Right focus right
 
 # Move focused window
-bindsym $mod+Shift+$left move left
-bindsym $mod+Shift+$down move down
-bindsym $mod+Shift+$up move up
-bindsym $mod+Shift+$right move right
+bindsym $super+Shift+$left move left
+bindsym $super+Shift+$down move down
+bindsym $super+Shift+$up move up
+bindsym $super+Shift+$right move right
 
 # Alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+bindsym $super+Shift+Left move left
+bindsym $super+Shift+Down move down
+bindsym $super+Shift+Up move up
+bindsym $super+Shift+Right move right
 
 # Split in horizontal orientation
-bindsym $mod+b splith
+bindsym $super+b splith
 # Split in vertical orientation
-bindsym $mod+v splitv
+bindsym $super+v splitv
 
 # Enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
+bindsym $super+f fullscreen toggle
 
 # Change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+bindsym $super+s layout stacking
+bindsym $super+w layout tabbed
+bindsym $super+e layout toggle split
 
 # Toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $super+Shift+space floating toggle
 
 # Change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+bindsym $super+space focus mode_toggle
 
 # Focus the parent container
-bindsym $mod+a focus parent
+bindsym $super+a focus parent
 
 # Focus the child container
-bindsym $mod+z focus child
+bindsym $super+z focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -192,33 +260,50 @@ set $ws9 "9"
 set $ws10 "10"
 
 # Switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+bindsym $super+1 workspace number $ws1
+bindsym $super+2 workspace number $ws2
+bindsym $super+3 workspace number $ws3
+bindsym $super+4 workspace number $ws4
+bindsym $super+5 workspace number $ws5
+bindsym $super+6 workspace number $ws6
+bindsym $super+7 workspace number $ws7
+bindsym $super+8 workspace number $ws8
+bindsym $super+9 workspace number $ws9
+bindsym $super+0 workspace number $ws10
 
 # Move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+bindsym $super+Shift+1 move container to workspace number $ws1
+bindsym $super+Shift+2 move container to workspace number $ws2
+bindsym $super+Shift+3 move container to workspace number $ws3
+bindsym $super+Shift+4 move container to workspace number $ws4
+bindsym $super+Shift+5 move container to workspace number $ws5
+bindsym $super+Shift+6 move container to workspace number $ws6
+bindsym $super+Shift+7 move container to workspace number $ws7
+bindsym $super+Shift+8 move container to workspace number $ws8
+bindsym $super+Shift+9 move container to workspace number $ws9
+bindsym $super+Shift+0 move container to workspace number $ws10
 
 # Reload the configuration file.
-bindsym $mod+Shift+r reload
-# Exit sway.
-bindsym $mod+Shift+e exec "swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your ayland session.' -B 'Yes, exit sway.' 'swaymsg exit'"
+bindsym $super+Shift+c reload
+
+# Session control using swaynag.
+mode "nagbar" {
+    # Exit out of swaywm.
+    bindsym $exit_sway exit
+    # Reboot the machine
+    bindsym $reboot exec --no-startup-id "systemctl -i reboot"
+    # Shutdown the machine
+    bindsym $shutdown exec --no-startup-id "systemctl -i poweroff"
+    # Quit out of the nagbar.
+    bindsym $dismiss_nag exec killall swaynag; mode "default"
+}
+
+bindsym $super+Shift+e exec swaynag -t "warning" -f "FantasqueSansMono NF" -s "" \
+    -m "You pressed the exit shortcut. Select the action you want to perform." \
+    -B "($shutdown)hutdown" "systemctl -i poweroff" \
+    -B "($reboot)eboot" "systemctl -i reboot" \
+    -B "($exit_sway)xit sway" "swaymsg exit" \
+    -Z "($dismiss_nag)ismiss nagbar" "swaymsg mode default"; mode "nagbar"
 
 # Resize window (you can also use the mouse for that)
 mode "resize" {
@@ -239,13 +324,14 @@ mode "resize" {
         bindsym Up resize shrink height 2 px or 2 ppt
         bindsym Right resize grow width 2 px or 2 ppt
 
-        # Back to normal: Enter or Escape or $mod+r
+        # Back to normal: Enter or Escape or $super+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
+        bindsym $super+r mode "default"
 }
 
-bindsym $mod+r mode "resize"
+bindsym $super+r mode "resize"
+
 
 # Scratchpad
 # ----------
@@ -254,17 +340,18 @@ bindsym $mod+r mode "resize"
 # You can send windows there and get them back later.
 
 # Move the currently focused window to the scratchpad
-bindsym $mod+Shift+minus move scratchpad
+bindsym $super+Shift+minus move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-bindsym $mod+minus scratchpad show
+bindsym $super+minus scratchpad show
+
 
 # Custom
 # ------
 
 # Use Win+x to lock the screen.
-bindsym $mod+x exec --no-startup-id $swaylock
+bindsym $super+x exec --no-startup-id $swaylock
 
 # Use Alt+PageUp to start and Alt+PageDown to stop gammastep.
 bindsym $alt+End exec --no-startup-id pkill -USR1 gammastep
@@ -280,11 +367,31 @@ bindsym $alt+End exec --no-startup-id pkill -USR1 gammastep
 
 # Font for window titles. Will also be used by the bar unless a different font
 # Is used in the bar {} block below.
-font pango:monospace 10
+font pango:monospace 11
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # Text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:Fantasque Sans Mono 12
+font pango:FantasqueSansMono Nerd Font 13
+
+
+# Gaps
+# ----
+
+gaps inner 6
+
+# Only enable gaps on a workspace when there is at least one container.
+smart_gaps on
+
+
+# Titlebars
+# ---------
+
+# class                 border   base     text     indicator  child_border
+client.focused          #bcbebf  #e3e5e7  #232629  #bcbebf    #e3e5e7
+client.focused_inactive #cdcccd  #eff0f1  #707d8a  #cdcccd    #eff0f1
+client.unfocused        #dcdcdc  #fafafa  #969696  #dcdcdc    #fafafa
+client.urgent           #da4453  #ff98a2  #f8f8f2  #da4453    #ff98a2
+
 
 # Cursor
 # ------
