--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -16,9 +16,9 @@
         "sway/language",
         "backlight",
         "pulseaudio",
+        "battery",
         "bluetooth",
         "network",
-        "battery",
         "clock",
         "tray"
     ],
@@ -69,15 +69,26 @@
         "on-click": "pavucontrol"
     },
 
+    "battery": {
+        "states": {
+            "warning": 30,
+            "critical": 20
+        },
+        "format": "{icon} {capacity}%",
+        "format-icons": ["", "", "", "", ""],
+        "format-charging": " {capacity}%",
+        "format-full": " 100%"
+    },
+
     "bluetooth": {
-        "format-on": " on",
-        "format-off": " off",
         "format-disabled": "",
-        "format-connected": " {num_connections} connected",
-        "tooltip-format": "{controller_alias}\t{controller_address}",
-        "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
-        "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
-        "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%"
+        "format-on": "",
+        "format-off": "",
+        "format-connected": "",
+        "tooltip-format": "{controller_address} {controller_alias}\n\n{num_connections} connected",
+        "tooltip-format-connected": "{controller_address} {controller_alias}\n\n{num_connections} connected\n\n{device_enumerate}",
+        "tooltip-format-enumerate-connected": "{device_address} {device_alias}",
+        "tooltip-format-enumerate-connected-battery": "{device_address} {device_alias} {device_battery_percentage}%"
     },
 
     "network": {
@@ -88,17 +99,6 @@
         "format-linked": "",
         "format-disconnected": "",
         "on-click": "swaymsg exec '$term nmtui' floating enable"
-    },
-
-    "battery": {
-        "states": {
-            "warning": 30,
-            "critical": 20
-        },
-        "format": "{icon} {capacity}%",
-        "format-icons": ["", "", "", "", ""],
-        "format-charging": " {capacity}%",
-        "format-full": " 100%"
     },
 
     "clock": {
