--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,11 +1,8 @@
 {
-    "layer": "top", // Waybar at top layer
-    "position": "bottom", // Waybar position (top|bottom|left|right)
-    "height": 30, // Waybar height (to be removed for auto height)
-    // "width": 1280, // Waybar width
-    "spacing": 4, // Gaps between modules (4px)
+    "layer": "top",
+    "position": "bottom",
+    "spacing": 4,
 
-    // Choose the order of the modules
     "modules-left": [
         "sway/workspaces",
         "sway/mode",
@@ -92,6 +89,7 @@
     },
 
     "network": {
+        "format-disabled": "",
         "format-wifi": "直 {signalStrength}%",
         "format-ethernet": "",
         "tooltip-format-wifi": "{essid}: {bandwidthDownBits}, {bandwidthUpBits}",
