Fix pulseaudio bluetooth icons in waybar config

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -49,8 +49,8 @@
 
     "pulseaudio": {
         "format": "{icon} {volume}% {format_source}",
-        "format-bluetooth": "{icon} {volume}% {format_source}",
-        "format-bluetooth-muted": "{icon}婢 {format_source}",
+        "format-bluetooth": "{icon} {volume}% {format_source}",
+        "format-bluetooth-muted": "婢 {format_source}",
         "format-muted": "婢 {format_source}",
         "format-source": " {volume}%",
         "format-source-muted": "",
