--- a/.config/sway/config
+++ b/.config/sway/config
@@ -93,6 +93,10 @@ for_window [app_id="mpv"] inhibit_idle focus
 ##############
 
 
+# Update D-Bus activation environemnt and restart some important services
+# to enable screen-sharing.
+exec dbus-sway-environment
+
 # Start XDG autostart .desktop files using dex. See also
 # Https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment sway
@@ -186,16 +190,16 @@ mode "nagbar" {
     # Exit out of swaywm.
     bindsym $exit exit
     # Reboot the machine
-    bindsym $reboot exec --no-startup-id "systemctl -i reboot"
+    bindsym $reboot exec "systemctl -i reboot"
     # Shutdown the machine
-    bindsym $shutdown exec --no-startup-id "systemctl -i poweroff"
+    bindsym $shutdown exec "systemctl -i poweroff"
     # Quit out of the nagbar.
     bindsym $dismiss exec killall swaynag; mode "default"
 }
 
-bindsym $super+Shift+e exec swaynag -t "warning" -f "FantasqueSansMono NF" -s "" \
+bindsym $super+Shift+e exec swaynag -t "warning" -f "FantasqueSansMono Nerd Font" \
     -m "You pressed the exit shortcut. Select the action you want to perform." \
-    -B "Shutdown ($shutdown)" "systemctl -i poweroff" \
+    -s "" -B "Shutdown ($shutdown)" "systemctl -i poweroff" \
     -B "Reboot ($reboot)" "systemctl -i reboot" \
     -B "Exit Sway ($exit)" "swaymsg exit" \
     -Z "Dismiss Nagbar ($dismiss)" "swaymsg mode default"; mode "nagbar"
