--- a/.config/sway/config
+++ b/.config/sway/config
@@ -86,6 +86,9 @@ for_window [app_id="wev"] floating enable
 # pavucontrol
 for_window [app_id="pavucontrol"] floating enable
 
+# KeePassXC Access Request
+for_window [app_id="org.keepassxc.KeePassXC" title="Access\s*Request"] floating enable
+
 
 # Idle Inhibition
 # ---------------
