Change colorschemes for sway, rofi and waybar

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -8,10 +8,10 @@
 # title=foot
 # locked-title=no
 
-font=FantasqueSansMono Nerd Font Mono:weight=regular:size=10
-font-bold=FantasqueSansMono Nerd Font Mono:weight=bold:size=10
-font-italic=Victor Mono:weight=medium:slant=italic:size=9
-font-bold-italic=Victor Mono:weight=bold:slant=italic:size=9
+font=FiraCode Nerd Font:weight=regular:size=9
+font-bold=FiraCode Nerd Font:weight=semibold:size=9
+font-italic=VictorMono Nerd Font:weight=medium:slant=italic:size=9
+font-bold-italic=VictorMono Nerd Font:weight=bold:slant=italic:size=9
 # line-height=<font metrics>
 # letter-spacing=0
 # horizontal-letter-offset=0
@@ -23,7 +23,7 @@ font-bold-italic=Victor Mono:weight=bold:slant=italic:size=9
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
 # initial-window-mode=windowed
-pad=5x0                             # optionally append 'center'
+pad=5x0    # optionally append 'center'
 # resize-delay-ms=100
 
 # notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
@@ -63,37 +63,37 @@ pad=5x0                             # optionally append 'center'
 
 [cursor]
 # style=block
-# color=111111 dcdccc
+# color=3760bf 99a7df
 blink=yes
 # beam-thickness=1.5
 # underline-thickness=<font underline thickness>
 
 
 [colors]
-# Papercolor Light
+# tokyonight-day
 alpha=1.0
-background=eeeeee
-foreground=444444
+foreground=3760bf
+background=e1e2e7
 
 ## Normal/regular colors (color palette 0-7)
-regular0=eeeeee  # black
-regular1=af0000  # red
-regular2=008700  # green
-regular3=5f8700  # yellow
-regular4=0087af  # blue
-regular5=878787  # magenta
-regular6=005f87  # cyan
-regular7=764e37  # white
+regular0=e9e9ed  # black
+regular1=f52a65  # red
+regular2=587539  # green
+regular3=8c6c3e  # yellow
+regular4=2e7de9  # blue
+regular5=9854f1  # magenta
+regular6=007197  # cyan
+regular7=6172b0  # white
 
 ## Bright colors (color palette 8-15)
-bright0=bcbcbc   # bright black
-bright1=d70000   # bright red
-bright2=d70087   # bright green
-bright3=8700af   # bright yellow
-bright4=d75f00   # bright blue
-bright5=d75f00   # bright magenta
-bright6=4c7a5d   # bright cyan
-bright7=005faf   # bright white
+bright0=a1a6c5   # bright black
+bright1=f52a65   # bright red
+bright2=587539   # bright green
+bright3=8c6c3e   # bright yellow
+bright4=2e7de9   # bright blue
+bright5=9854f1   # bright magenta
+bright6=007197   # bright cyan
+bright7=3760bf   # bright white
 
 ## Dimmed colors (see foot.ini(5) man page)
 # dim0=<not set>
@@ -104,12 +104,14 @@ bright7=005faf   # bright white
 # 16 = <256-color palette #16>
 # ...
 # 255 = <256-color palette #255>
+16=b15c00
+17=c64343
 
 ## Misc colors
-selection-foreground=eeeeee
-selection-background=0087af
+selection-foreground=3760bf
+selection-background=99a7df
 # jump-labels=<regular0> <regular3>
-# urls=<regular3>
+urls=387068
 # scrollback-indicator=<regular0> <bright4>
 
 
