--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -1,13 +1,13 @@
 [Appearance]
-color_scheme_path=/nix/store/1k5nsh299v5cm3vdq4hkrajyrvizax9n-qt5ct-1.5/share/qt5ct/colors/airy.conf
+color_scheme_path=/nix/store/3b3k3h5wsikr4g54rdd9kf3gzs7f9jlk-qt5ct-1.5/share/qt5ct/colors/airy.conf
 custom_palette=false
 icon_theme=Papirus
 standard_dialogs=default
 style=Adwaita
 
 [Fonts]
-fixed=@Variant(\0\0\0@\0\0\0\x36\0\x46\0\x61\0n\0t\0\x61\0s\0q\0u\0\x65\0S\0\x61\0n\0s\0M\0o\0n\0o\0 \0N\0\x65\0r\0\x64\0 \0\x46\0o\0n\0t@\"\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
-general=@Variant(\0\0\0@\0\0\0\f\0R\0o\0\x62\0o\0t\0o@ \0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+fixed=@Variant(\0\0\0@\0\0\0$\0\x46\0i\0r\0\x61\0\x43\0o\0\x64\0\x65\0 \0N\0\x65\0r\0\x64\0 \0\x46\0o\0n\0t@ \0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+general=@Variant(\0\0\0@\0\0\0$\0N\0o\0t\0o\0S\0\x61\0n\0s\0 \0N\0\x65\0r\0\x64\0 \0\x46\0o\0n\0t@ \0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
 
 [Interface]
 activate_item_on_single_click=1
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\au\0\0\x4\b\0\0\0\0\0\0\0\x14\0\0\x3O\0\0\x3j\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\au\0\0\x4\b)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\a\x7f\0\0\x4\x4\0\0\0\0\0\0\0\x14\0\0\x3O\0\0\x3j\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\a\x7f\0\0\x4\x4)
 
 [Troubleshooting]
 force_raster_widgets=1
