--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -8,10 +8,10 @@
 # title=foot
 # locked-title=no
 
-font=FiraCode Nerd Font:weight=regular:size=9
-font-bold=FiraCode Nerd Font:weight=semibold:size=9
-font-italic=VictorMono Nerd Font:weight=medium:slant=italic:size=9
-font-bold-italic=VictorMono Nerd Font:weight=bold:slant=italic:size=9
+font=FiraCode Nerd Font:size=9:fontfeatures=cv16:fontfeatures=cv18:fontfeatures=cv29:fontfeatures=cv30:fontfeatures=cv31:fontfeatures=onum:fontfeatures=ss03:fontfeatures=ss05:fontfeatures=zero, monospace:size=9
+font-bold=FiraCode Nerd Font:weight=semibold:size=9:fontfeatures=cv16:fontfeatures=cv18:fontfeatures=cv29:fontfeatures=cv30:fontfeatures=cv31:fontfeatures=onum:fontfeatures=ss03:fontfeatures=ss05:fontfeatures=zero, monospace:weight=bold:size=9
+font-italic=CaskaydiaCove Nerd Font:weight=semilight:slant=italic:size=9:fontfeatures=calt:fontfeatures=ss01, monospace:slant=italic:size=9
+font-bold-italic=CaskaydiaCove Nerd Font:weight=semibold:slant=italic:size=9:fontfeatures=calt:fontfeatures=ss01, monospace:weight=bold:slant=italic:size=9
 # line-height=<font metrics>
 # letter-spacing=0
 # horizontal-letter-offset=0
