Tweak some foot settings

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -191,3 +191,6 @@ urls=387068
 # select-word=BTN_LEFT-2
 # select-word-whitespace=Control+BTN_LEFT-2
 # select-row=BTN_LEFT-3
+
+[tweak]
+font-monospace-warn=no
