Add kitty.conf; Change term in sway to kitty

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -151,7 +151,7 @@ set $dismiss d
 
 ## Programs
 # Terminal Emulator
-set $term "foot"
+set $term "kitty"
 
 # Menu Program
 set $menu "rofi -show drun"
