Change default layout to splits and the default window spawning strategy to split

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -673,7 +673,7 @@ enable_audio_bell no
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-enabled_layouts tall, grid, stack
+enabled_layouts splits, grid, tall, fat
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -1543,6 +1543,10 @@ map kitty_mod+i show_scrollback
 map kitty_mod+apostrophe next_layout
 
 #: Remap some overridden shortcuts to different keys.
+
+map kitty_mod+Return launch --location=split
+
+#: Create new windows by smartly splitting the space used by existing ones.
 
 map kitty_mod+h neighboring_window left
 map kitty_mod+j neighboring_window down
