--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -673,7 +673,7 @@ enable_audio_bell no
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-enabled_layouts splits, grid, tall, fat
+enabled_layouts splits, grid, tall, stack
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
