--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -112,8 +112,8 @@ disable_ligatures cursor
 #: implemented using the calt OpenType feature. For disabling general
 #: ligatures, use the font_features option.
 
-font_features FiraCodeNerdFontComplete-Regular +cv16 +cv18 +cv29 +cv30 +cv31 +onum +ss03 +ss05 +zero
-font_features FiraCodeNerdFontComplete-SemiBold +cv16 +cv18 +cv29 +cv30 +cv31 +onum +ss03 +ss05 +zero
+font_features FiraCodeNerdFontComplete-Regular +cv16 +cv18 +cv25 +cv26 +cv28 +cv29 +cv30 +cv31 +cv32 +onum +ss02 +ss03 +ss05 +ss06 +ss07 +ss08 +ss09 +zero
+font_features FiraCodeNerdFontComplete-SemiBold +cv16 +cv18 +cv25 +cv26 +cv28 +cv29 +cv30 +cv31 +cv32 +onum +ss02 +ss03 +ss05 +ss06 +ss07 +ss08 +ss09 +zero
 
 font_features CaskaydiaCoveNerdFontComplete-SemiLightItalic +calt +ss01
 font_features CaskaydiaCoveNerdFontComplete-SemiBoldItalic +calt +ss01
