--- a/.config/sway/config
+++ b/.config/sway/config
@@ -28,8 +28,22 @@ set $waybar "bash ~/.config/sway/scripts/waybar.sh"
 # Inputs / Outputs #
 ####################
 
+
 # Inputs
 # ------
+
+# Laptop Keyboard
+input "1:1:AT_Translated_Set_2_keyboard" {
+    xkb_layout us
+    xkb_variant colemak
+}
+
+# Mechanical Keyboard
+input "6700:38647:SEMICO___Fantech_MAXFIT87_Mechanical_Keyboard" {
+    xkb_layout us
+    xkb_model pc104aw-zqu
+    xkb_variant cmk_ed_dh
+}
 
 # Touchpad
 input "1267:12433:ELAN0504:01_04F3:3091_Touchpad" {
@@ -110,7 +124,7 @@ exec swayidle -w \
      before-sleep $swaylock
 
 # Start a single instance of gammastep.
-exec gammastep -l 0:0 -t 1900:1900 -g 1.2 -m wayland
+exec gammastep
 
 # Start a single instance of Waybar.
 exec_always $waybar
