--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1572,8 +1572,8 @@ map kitty_mod+n detach_window ask
 
 #: Ask which OS window to move a tab into.
 
-map kitty_mod+[ next_tab
-map kitty_mod+] previous_tab
+map kitty_mod+[ previous_tab
+map kitty_mod+] next_tab
 
 #: Navigate tabs using [ and ].
 
