--- a/.config/sway/config
+++ b/.config/sway/config
@@ -33,13 +33,16 @@ set $waybar "bash ~/.config/sway/scripts/waybar.sh"
 # ------
 
 # Keyboards
-input "*" {
-    accel_profile flat
+input type:keyboard {
     xkb_layout "us,np"
     xkb_variant "colemak_dh,"
 }
 
-# Touchpad
+# Pointers
+input type:pointer {
+    accel_profile flat
+}
+
 input "1267:12433:ELAN0504:01_04F3:3091_Touchpad" {
     accel_profile adaptive
     click_method clickfinger
@@ -163,30 +166,40 @@ set $term "foot"
 set $menu "rofi -show drun"
 
 
+# Keyboard Layout
+# ---------------
+
+bindsym --to-code $super+Shift+n exec --no-startup-id \
+    swaymsg 'input type:keyboard xkb_switch_layout next'
+bindsym --to-code $super+Shift+p exec --no-startup-id \
+    swaymsg 'input type:keyboard xkb_switch_layout prev'
+
+
 # Brightness and Volume
 # ---------------------
 
 ## Brightness
-bindsym XF86MonBrightnessUp exec --no-startup-id light -A 2% \
+bindsym --to-code XF86MonBrightnessUp exec --no-startup-id light -A 2% \
     && light -G | cut -d . -f 1 > $wobsock
-bindsym XF86MonBrightnessDown exec --no-startup-id light -N 2% && light -U 2% \
-    && light -G | cut -d . -f 1 > $wobsock
+bindsym --to-code XF86MonBrightnessDown exec --no-startup-id light -N 2% \
+    && light -U 2% && light -G | cut -d . -f 1 > $wobsock
 
 ## Volume
 # Adjust sink volumes.
-bindsym XF86AudioRaiseVolume exec --no-startup-id pamixer --increase 2 \
+bindsym --to-code XF86AudioRaiseVolume exec --no-startup-id pamixer --increase 2 \
     && pamixer --get-volume > $wobsock
-bindsym XF86AudioLowerVolume exec --no-startup-id pamixer --decrease 2 \
+bindsym --to-code XF86AudioLowerVolume exec --no-startup-id pamixer --decrease 2 \
     && pamixer --get-volume > $wobsock
-bindsym XF86AudioMute exec --no-startup-id pamixer --toggle-mute \
+bindsym --to-code XF86AudioMute exec --no-startup-id pamixer --toggle-mute \
     && (pamixer --get-mute && echo 0 > $wobsock) || pamixer --get-volume > $wobsock
 
 # Adjust source volumes.
-bindsym $alt+equal exec --no-startup-id pamixer --default-source --increase 2 \
+bindsym --to-code $alt+equal exec --no-startup-id pamixer --default-source --increase 2 \
     && pamixer --default-source --get-volume > $wobsock
-bindsym $alt+minus exec --no-startup-id pamixer --default-source --decrease 2 \
+bindsym --to-code $alt+minus exec --no-startup-id pamixer --default-source --decrease 2 \
     && pamixer --default-source --get-volume > $wobsock
-bindsym $alt+BackSpace exec --no-startup-id pamixer --default-source --toggle-mute \
+bindsym --to-code $alt+BackSpace exec --no-startup-id \
+    pamixer --default-source --toggle-mute \
     && (pamixer --default-source --get-mute && echo 0 > $wobsock) \
     || pamixer --default-source --get-volume > $wobsock
 
@@ -195,7 +208,7 @@ bindsym $alt+BackSpace exec --no-startup-id pamixer --default-source --toggle-mu
 # ---------------
 
 # Suspend on pressing the "Sleep" button.
-bindsym Xf86Sleep exec --no-startup-id $suspend
+bindsym --to-code Xf86Sleep exec --no-startup-id $suspend
 
 # Suspend on laptop lid switch.
 bindswitch --locked lid:on exec --no-startup-id $suspend
@@ -203,16 +216,16 @@ bindswitch --locked lid:on exec --no-startup-id $suspend
 # Session control using swaynag.
 mode "nagbar" {
     # Exit out of swaywm.
-    bindsym $exit exit
+    bindsym --to-code $exit exit
     # Reboot the machine
-    bindsym $reboot exec "systemctl -i reboot"
+    bindsym --to-code $reboot exec "systemctl -i reboot"
     # Shutdown the machine
-    bindsym $shutdown exec "systemctl -i poweroff"
+    bindsym --to-code $shutdown exec "systemctl -i poweroff"
     # Quit out of the nagbar.
-    bindsym $dismiss exec killall swaynag; mode "default"
+    bindsym --to-code $dismiss exec killall swaynag; mode "default"
 }
 
-bindsym $super+Shift+e exec swaynag -t "warning" -f "FantasqueSansMono Nerd Font" \
+bindsym --to-code $super+Shift+e exec swaynag -t "warning" -f "FantasqueSansMono Nerd Font" \
     -m "You pressed the exit shortcut. Select the action you want to perform." \
     -s "" -B "Shutdown ($shutdown)" "systemctl -i poweroff" \
     -B "Reboot ($reboot)" "systemctl -i reboot" \
@@ -227,62 +240,62 @@ bindsym $super+Shift+e exec swaynag -t "warning" -f "FantasqueSansMono Nerd Font
 floating_modifier $super
 
 # Start a terminal
-bindsym $super+Return exec $term
+bindsym --to-code $super+Return exec $term
 
 # Kill focused window
-bindsym $super+Shift+q kill
+bindsym --to-code $super+Shift+q kill
 
 # Start wofi menu.
-bindsym $super+d exec $menu
+bindsym --to-code $super+d exec $menu
 
 # Change focus
-bindsym $super+$left focus left
-bindsym $super+$down focus down
-bindsym $super+$up focus up
-bindsym $super+$right focus right
+bindsym --to-code $super+$left focus left
+bindsym --to-code $super+$down focus down
+bindsym --to-code $super+$up focus up
+bindsym --to-code $super+$right focus right
 
 # Alternatively, you can use the cursor keys:
-bindsym $super+Left focus left
-bindsym $super+Down focus down
-bindsym $super+Up focus up
-bindsym $super+Right focus right
+bindsym --to-code $super+Left focus left
+bindsym --to-code $super+Down focus down
+bindsym --to-code $super+Up focus up
+bindsym --to-code $super+Right focus right
 
 # Move focused window
-bindsym $super+Shift+$left move left
-bindsym $super+Shift+$down move down
-bindsym $super+Shift+$up move up
-bindsym $super+Shift+$right move right
+bindsym --to-code $super+Shift+$left move left
+bindsym --to-code $super+Shift+$down move down
+bindsym --to-code $super+Shift+$up move up
+bindsym --to-code $super+Shift+$right move right
 
 # Alternatively, you can use the cursor keys:
-bindsym $super+Shift+Left move left
-bindsym $super+Shift+Down move down
-bindsym $super+Shift+Up move up
-bindsym $super+Shift+Right move right
+bindsym --to-code $super+Shift+Left move left
+bindsym --to-code $super+Shift+Down move down
+bindsym --to-code $super+Shift+Up move up
+bindsym --to-code $super+Shift+Right move right
 
 # Split in horizontal orientation
-bindsym $super+b splith
+bindsym --to-code $super+b splith
 # Split in vertical orientation
-bindsym $super+v splitv
+bindsym --to-code $super+v splitv
 
 # Enter fullscreen mode for the focused container
-bindsym $super+f fullscreen toggle
+bindsym --to-code $super+f fullscreen toggle
 
 # Change container layout (stacked, tabbed, toggle split)
-bindsym $super+s layout stacking
-bindsym $super+w layout tabbed
-bindsym $super+e layout toggle split
+bindsym --to-code $super+s layout stacking
+bindsym --to-code $super+w layout tabbed
+bindsym --to-code $super+e layout toggle split
 
 # Toggle tiling / floating
-bindsym $super+Shift+space floating toggle
+bindsym --to-code $super+Shift+space floating toggle
 
 # Change focus between tiling / floating windows
-bindsym $super+space focus mode_toggle
+bindsym --to-code $super+space focus mode_toggle
 
 # Focus the parent container
-bindsym $super+a focus parent
+bindsym --to-code $super+a focus parent
 
 # Focus the child container
-bindsym $super+z focus child
+bindsym --to-code $super+z focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -298,31 +311,31 @@ set $ws9 "9"
 set $ws10 "10"
 
 # Switch to workspace
-bindsym $super+1 workspace number $ws1
-bindsym $super+2 workspace number $ws2
-bindsym $super+3 workspace number $ws3
-bindsym $super+4 workspace number $ws4
-bindsym $super+5 workspace number $ws5
-bindsym $super+6 workspace number $ws6
-bindsym $super+7 workspace number $ws7
-bindsym $super+8 workspace number $ws8
-bindsym $super+9 workspace number $ws9
-bindsym $super+0 workspace number $ws10
+bindsym --to-code $super+1 workspace number $ws1
+bindsym --to-code $super+2 workspace number $ws2
+bindsym --to-code $super+3 workspace number $ws3
+bindsym --to-code $super+4 workspace number $ws4
+bindsym --to-code $super+5 workspace number $ws5
+bindsym --to-code $super+6 workspace number $ws6
+bindsym --to-code $super+7 workspace number $ws7
+bindsym --to-code $super+8 workspace number $ws8
+bindsym --to-code $super+9 workspace number $ws9
+bindsym --to-code $super+0 workspace number $ws10
 
 # Move focused container to workspace
-bindsym $super+Shift+1 move container to workspace number $ws1
-bindsym $super+Shift+2 move container to workspace number $ws2
-bindsym $super+Shift+3 move container to workspace number $ws3
-bindsym $super+Shift+4 move container to workspace number $ws4
-bindsym $super+Shift+5 move container to workspace number $ws5
-bindsym $super+Shift+6 move container to workspace number $ws6
-bindsym $super+Shift+7 move container to workspace number $ws7
-bindsym $super+Shift+8 move container to workspace number $ws8
-bindsym $super+Shift+9 move container to workspace number $ws9
-bindsym $super+Shift+0 move container to workspace number $ws10
+bindsym --to-code $super+Shift+1 move container to workspace number $ws1
+bindsym --to-code $super+Shift+2 move container to workspace number $ws2
+bindsym --to-code $super+Shift+3 move container to workspace number $ws3
+bindsym --to-code $super+Shift+4 move container to workspace number $ws4
+bindsym --to-code $super+Shift+5 move container to workspace number $ws5
+bindsym --to-code $super+Shift+6 move container to workspace number $ws6
+bindsym --to-code $super+Shift+7 move container to workspace number $ws7
+bindsym --to-code $super+Shift+8 move container to workspace number $ws8
+bindsym --to-code $super+Shift+9 move container to workspace number $ws9
+bindsym --to-code $super+Shift+0 move container to workspace number $ws10
 
 # Reload the configuration file.
-bindsym $super+Shift+c reload
+bindsym --to-code $super+Shift+c reload
 
 # Resize window (you can also use the mouse for that)
 mode "resize" {
@@ -332,24 +345,24 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym $left resize shrink width 2 px or 2 ppt
-        bindsym $down resize grow height 2 px or 2 ppt
-        bindsym $up resize shrink height 2 px or 2 ppt
-        bindsym $right resize grow width 2 px or 2 ppt
+        bindsym --to-code $left resize shrink width 2 px or 2 ppt
+        bindsym --to-code $down resize grow height 2 px or 2 ppt
+        bindsym --to-code $up resize shrink height 2 px or 2 ppt
+        bindsym --to-code $right resize grow width 2 px or 2 ppt
 
         # Same bindings, but for the arrow keys
-        bindsym Left resize shrink width 2 px or 2 ppt
-        bindsym Down resize grow height 2 px or 2 ppt
-        bindsym Up resize shrink height 2 px or 2 ppt
-        bindsym Right resize grow width 2 px or 2 ppt
+        bindsym --to-code Left resize shrink width 2 px or 2 ppt
+        bindsym --to-code Down resize grow height 2 px or 2 ppt
+        bindsym --to-code Up resize shrink height 2 px or 2 ppt
+        bindsym --to-code Right resize grow width 2 px or 2 ppt
 
         # Back to normal: Enter or Escape or $super+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $super+r mode "default"
+        bindsym --to-code Return mode "default"
+        bindsym --to-code Escape mode "default"
+        bindsym --to-code $super+r mode "default"
 }
 
-bindsym $super+r mode "resize"
+bindsym --to-code $super+r mode "resize"
 
 
 # Scratchpad
@@ -359,43 +372,43 @@ bindsym $super+r mode "resize"
 # You can send windows there and get them back later.
 
 # Move the currently focused window to the scratchpad
-bindsym $super+Shift+minus move scratchpad
+bindsym --to-code $super+Shift+minus move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-bindsym $super+minus scratchpad show
+bindsym --to-code $super+minus scratchpad show
 
 
 # Utilities
 # ---------
 
 # Use Win+x to lock the screen.
-bindsym $super+x exec $swaylock
+bindsym --to-code $super+x exec $swaylock
 
 # Use Alt+PageUp to start and Alt+PageDown to stop gammastep.
-bindsym $alt+End exec --no-startup-id pkill -USR1 gammastep
+bindsym --to-code $alt+End exec --no-startup-id pkill -USR1 gammastep
 
 ## Screenshot commands
 # File to save the screenshot to.
 set $screenshot_file ~/Pictures/Screenshots/Screenshot_$(date +'%Y%m%d_%H%M%S').png
 
 # Capture and save manually selected window.
-bindsym Print exec grimshot save window $screenshot_file
+bindsym --to-code Print exec grimshot save window $screenshot_file
 # Capture and save manually selected area.
-bindsym $super+Print exec grimshot save area $screenshot_file
+bindsym --to-code $super+Print exec grimshot save area $screenshot_file
 # Capture and save active window.
-bindsym $super+$alt+Print exec grimshot save active $screenshot_file
+bindsym --to-code $super+$alt+Print exec grimshot save active $screenshot_file
 # Capture and save active output.
-bindsym $super+Ctrl+Print exec grimshot save output $screenshot_file
+bindsym --to-code $super+Ctrl+Print exec grimshot save output $screenshot_file
 
 # Capture and copy manually selected window.
-bindsym Shift+Print exec grimshot copy window
+bindsym --to-code Shift+Print exec grimshot copy window
 # Capture and copy manually selected area.
-bindsym $super+Shift+Print exec grimshot copy area
+bindsym --to-code $super+Shift+Print exec grimshot copy area
 # Capture and copy active window.
-bindsym $super+$alt+Shift+Print exec grimshot copy active
+bindsym --to-code $super+$alt+Shift+Print exec grimshot copy active
 # Capture and copy active output.
-bindsym $super+Ctrl+Shift+Print exec grimshot copy output
+bindsym --to-code $super+Ctrl+Shift+Print exec grimshot copy output
 
 
 #########
