Change keyboard order and layout specification in sway config

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -34,15 +34,16 @@ set $waybar "bash ~/.config/sway/scripts/waybar.sh"
 # ------
 
 # Keyboards
+input '1:1:AT_Translated_Set_2_keyboard' {
+    xkb_layout 'us,np'
+    xkb_variant 'colemak_dh,'
+}
 input type:keyboard {
     xkb_layout 'us,np'
     xkb_variant 'altgr-intl,'
 }
-input '1:1:AT_Translated_Set_2_keyboard' xkb_variant 'colemak_dh,'
 
 # Pointers
-input type:pointer accel_profile flat
-
 input '1267:12433:ELAN0504:01_04F3:3091_Touchpad' {
     accel_profile adaptive
     click_method clickfinger
@@ -50,6 +51,7 @@ input '1267:12433:ELAN0504:01_04F3:3091_Touchpad' {
     natural_scroll enabled
     tap enabled
 }
+input type:pointer accel_profile flat
 
 
 # Outputs
